2004-10-06  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/configure.ac src/makefile.am
    Finally fix the bulding of DLLs on Win32/MinGW.

    * tests/makefile.am
    Fix running of tests on Win32/MinGW.

2004-09-30  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac Win32/Makefile.mingw.in
    More support for compiling on Win32 using MinGW. Now uses FFTW3.

    * examples/audio_out.c
    Remove include of <mmreg.h> on win32.

2004-09-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac Win32/Makefile.mingw.in
    Add preliminary support for compiling on Win32 using MinGW.

    * configure.ac 
    Bump version to 0.1.2.
    Add --enable-gcc-werror configure option.

    * examples/sndfile-resample.c tests/src-evaluate.c
    Use ISO C standard function remove instead of unlink.

    * Win32/Makefile.msvc
    Add the top level directory to the include path (for sndfile.h).

2004-09-10  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/util.h tests/*.c
    Move macros for ABS, MIN, MAX and ARRAY_LEN to util.h.

    * tests/reset_test.c
    Add test function callback_reset_test() to test for the problem below.

    * src/samplerate.c
    Reset SRC_PRIVATE fields saved_data and saved_frames in src_reset(). Thanks
    to Justin Drury for pointing this out.

2004-08-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Fix typos in converter name strings. Thanks to Tom Szilagyi for finding them.

2004-07-18  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Bump version to 0.1.1.

    * doc/*.html Win32/config.h
    Changes for new version.

    * Makefile.am src/Makefile.am
    Add "make check-asm" target which is not used by default.

2004-06-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Use fmod() to calculate input_index. This is more resitant to rounding
    errors than input_index -= floor (input_index).
