@@ -9,31 +9,31 @@ noinst_HEADERS = calc_snr.h util.h
 #===============================================================================
 
 misc_test_SOURCES = misc_test.c util.c util.h
-misc_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(EFENCE_LIB)
+misc_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la
 
 termination_test_SOURCES = termination_test.c util.c util.h
-termination_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(EFENCE_LIB)
+termination_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la
 
 simple_test_SOURCES = simple_test.c util.c util.h
-simple_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(EFENCE_LIB)
+simple_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la
 
 reset_test_SOURCES = reset_test.c util.c util.h
-reset_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(EFENCE_LIB)
+reset_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la
 
 multi_channel_test_SOURCES = multi_channel_test.c util.c calc_snr.c
 multi_channel_test_CFLAGS = @FFTW3_CFLAGS@
-multi_channel_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(FFTW3_LIBS) $(EFENCE_LIB)
+multi_channel_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(FFTW3_LIBS)
 
 snr_bw_test_SOURCES = snr_bw_test.c calc_snr.c util.c util.h
 snr_bw_test_CFLAGS = @FFTW3_CFLAGS@
-snr_bw_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(FFTW3_LIBS) $(EFENCE_LIB)
+snr_bw_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(FFTW3_LIBS)
 
 callback_test_SOURCES = callback_test.c util.c util.h
 callback_test_CFLAGS = @FFTW3_CFLAGS@
-callback_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(EFENCE_LIB)
+callback_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la
 
 float_short_test_SOURCES = float_short_test.c util.c util.h
-float_short_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la $(EFENCE_LIB)
+float_short_test_LDADD = $(SAMPLRATEDIR)/libsamplerate.la
 
 # This program is for evaluating other sample rate converters.
 
